# 2021-fall-dav-team-5

./: .gitignore  README.md  package.json
backend/: README.md  data.csv  db.sqlite3  parse_csv.py  pyproject.toml
backend/app/: models.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_auto_20211110_0456.py  0002_auto_20211117_1410.py  0002_remove_menu_weight.py  0003_auto_20211105_1840.py  0003_auto_20211112_1444.py  0003_menu_ingredients_parsed.py  0004_auto_20211105_1851.py  0004_auto_20211115_0433.py  0005_alter_recipe_menu.py
backend/misc/: parse_ingredients.py
backend/server/: settings.py  urls.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Menu.tsx  api.tsx  globals.ts  hooks.ts  index.tsx  interfaces.tsx
frontend/src/components/: Body.css  Body.tsx  BubbleChart.css  BubbleChart.tsx  ColorFilter.tsx  ColorSelector.css  ColorSelector.tsx  ExampleComponent.tsx  Footer.css  Footer.tsx  Header.css  Header.tsx  ModalComponent.css  ModalComponent.tsx  PieSVG.tsx  PopupWindow.tsx  ScatterPlotMenu.css  ScatterPlotMenu.tsx  Search.css  Search.tsx  SearchHeader.css  SearchHeader.tsx  ThreeToggleButtons.tsx  Visualization.css  Visualization.tsx
frontend/src/components/charts/: BubbleChart.tsx  ScatterPlot.tsx  TooltipComponent.tsx
frontend/src/functions/: getColorScale.ts  getDomain.ts  getScale.ts  parseFilter.ts
frontend/src/store/: configureStore.ts  getPreloadedState.ts
frontend/src/store/reducers/: UI.ts  (+3 more)
src/components/: SearchHeader.tsx
(+10 files in other folders)
